Fix layers, add files for game objects, clean up

--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 
 <!DOCTYPE html>
-
 <html>
-
 <head>
-  <title>RigLike</title>
+  <title>Gush</title>
   <meta charset="utf-8">
   <style>
     * {
@@ -21,15 +19,8 @@
     }
   </style>
 </head>
-
 <body>
 <script src="https://kaboomjs.com/lib/0.6.0/kaboom.js"></script>
-<!-- <script src="https://kaboomjs.com/lib/0.6.0/plugins/aseprite.js"></script>
-<script src="https://kaboomjs.com/lib/0.6.0/plugins/pedit.js"></script>
-<script src="https://kaboomjs.com/pub/legacy/kbmsprite.js"></script> -->
-
 <script type="module" src="/entry.js"></script>
-
 </body>
-
 </html>
