--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </head>
 <body>
 <script src="https://kaboomjs.com/lib/0.6.0/kaboom.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 <script type="module" src="/entry.js"></script>
 </body>
 </html>
