Refactor level generation - Change the way levels are drawn to drastically improve performance - addLevel cannot be used because too many objects destroys performance - Add objects to the scene as they come into view, destroy them as they leave - Add lifecycle component so lifecycle events can be added to configs - Add level 1-1 layout - Add black bars to UI to prevent player seeing tile pop-in - Clean up unnecessary code - Update readme with new assets

--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
       width: 100%;
       height: 100%;
       overflow: hidden;
+      background-color: black;
     }
-    canvas {
+    canvas#game {
       display: block;
     }
   </style>
 </head>
 <body>
-<script src="https://kaboomjs.com/lib/0.6.0/kaboom.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
-<script type="module" src="/entry.js"></script>
+  <canvas id="game"></canvas>
+  <script src="https://kaboomjs.com/lib/0.6.0/kaboom.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
+  <script type="module" src="/entry.js"></script>
 </body>
 </html>
