Add supercover line checking - Make monsters aware of player LOS, stop moving if they can't see player

--- a/index.html
+++ b/index.html
@@ -4,21 +4,7 @@
 <head>
   <title>Gush</title>
   <meta charset="utf-8">
-  <style>
-    * {
-      margin: 0;
-    }
-    html,
-    body {
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      background-color: black;
-    }
-    canvas#game {
-      display: block;
-    }
-  </style>
+  <link href="/style.css" rel="stylesheet">
 </head>
 <body>
   <canvas id="game"></canvas>
