Basic minimap (unfinished) - Refactor level visibility code - Always flash player red on hit

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <canvas id="game"></canvas>
+  <canvas id="minimap"></canvas>
   <script src="https://kaboomjs.com/lib/0.6.0/kaboom.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
   <script type="module" src="/entry.js"></script>
