Add support for gamepads - Overhaul input system - Change messaging based on presence of gamepad - Refactor player attacking in order to use second analog stick - Fix player diagonal speed - Use new input on character select screen - Add gamepad vibration effects - Move keymappings to state - Add favicons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <title>Gush</title>
   <meta charset="utf-8">
   <link href="/style.css" rel="stylesheet">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
+  <link rel="icon" type="image/x-icon" href="/assets/icons/favicon.ico" />
 </head>
 <body>
   <canvas id="game"></canvas>
