Add minimap - Don't allow game to start on analog stick input since it doesn't count toward making audio context available in the browser

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <link rel="icon" type="image/x-icon" href="/assets/icons/favicon.ico" />
 </head>
 <body>
-  <canvas id="game"></canvas>
-  <canvas id="minimap"></canvas>
+  <div id="container">
+    <canvas id="game"></canvas>
+    <canvas id="minimap"></canvas>
+  </div>
   <script src="https://kaboomjs.com/lib/0.6.0/kaboom.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
   <script type="module" src="/entry.js"></script>
